--- a/index.html
+++ b/index.html
@@ -17,21 +17,29 @@
     <link rel="stylesheet" href="./Assets/style/global.css" />
   </head>
   <body>
-    <div class="card">
-      <img class="card_Image" src="./Assets/images/image-qr-code.png" alt="" />
-      <div class="card_Text">
-        <h1>Improve your front-end skills by building projects</h1>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+    <main>
+      <div class="card">
+        <img
+          class="card_Image"
+          src="./Assets/images/image-qr-code.png"
+          alt=""
+        />
+        <div class="card_Text">
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://twitter.com/AmitDeka10">Amit Deka</a>.
-    </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://twitter.com/AmitDeka10">Amit Deka</a>.
+      </div>
+    </footer>
   </body>
 </html>
